feat: implement read memo client

--- a/static/index.html
+++ b/static/index.html
@@ -11,7 +11,7 @@
         <input id="memo-input" type="text" placeholder="입력해주세요" required/>
         <button>create</button>
     </form>
-    <ul>
+    <ul id="memo-ul">
 
     </ul>
     <script src="app.js"></script>
