--- a/market-clone/frontend/index.html
+++ b/market-clone/frontend/index.html
@@ -12,7 +12,6 @@
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <script src="index.js"></script>
   </head>
   <body>
     <header>
@@ -40,57 +39,7 @@
     </header>
 
     <main>
-      <div class="item-list">
-        <div class="item-list__img">
-          <img src="assets/img.svg" alt="" />
-        </div>
-        <div class="item-list__info">
-          <div class="item-list__info-title">게이밍 PC 팝니다</div>
-          <div class="item-list__info-meta">역삼동 19초 전</div>
-          <div class="item-list__info-price">100만원</div>
-        </div>
-      </div>
-      <div class="item-list">
-        <div class="item-list__img"><img src="assets/img.svg" alt="" /></div>
-        <div class="item-list__info">
-          <div class="item-list__info-title">게이밍 PC 팝니다</div>
-          <div class="item-list__info-meta">역삼동 19초 전</div>
-          <div class="item-list__info-price">100만원</div>
-        </div>
-      </div>
-      <div class="item-list">
-        <div class="item-list__img"><img src="assets/img.svg" alt="" /></div>
-        <div class="item-list__info">
-          <div class="item-list__info-title">게이밍 PC 팝니다</div>
-          <div class="item-list__info-meta">역삼동 19초 전</div>
-          <div class="item-list__info-price">100만원</div>
-        </div>
-      </div>
-      <div class="item-list">
-        <div class="item-list__img"><img src="assets/img.svg" alt="" /></div>
-        <div class="item-list__info">
-          <div class="item-list__info-title">게이밍 PC 팝니다</div>
-          <div class="item-list__info-meta">역삼동 19초 전</div>
-          <div class="item-list__info-price">100만원</div>
-        </div>
-      </div>
-      <div class="item-list">
-        <div class="item-list__img"><img src="assets/img.svg" alt="" /></div>
-        <div class="item-list__info">
-          <div class="item-list__info-title">게이밍 PC 팝니다</div>
-          <div class="item-list__info-meta">역삼동 19초 전</div>
-          <div class="item-list__info-price">100만원</div>
-        </div>
-      </div>
-      <div class="item-list">
-        <div class="item-list__img"><img src="assets/img.svg" alt="" /></div>
-        <div class="item-list__info">
-          <div class="item-list__info-title">게이밍 PC 팝니다</div>
-          <div class="item-list__info-meta">역삼동 19초 전</div>
-          <div class="item-list__info-price">100만원</div>
-        </div>
-      </div>
-      <div class="write-btn">+ 글쓰기</div>
+      <a class="write-btn" href="write.html">+ 글쓰기</a>
     </main>
 
     <footer>
@@ -117,7 +66,7 @@
           <div class="footer-icons__img">
             <img src="assets/chat.svg" alt="" />
           </div>
-          <div class="footer-icons__desc chat">채팅</div>
+          <div class="footer-icons__desc">채팅</div>
         </div>
         <div class="footer-icons">
           <div class="footer-icons__img">
@@ -129,5 +78,6 @@
     </footer>
 
     <div class="media-info-msg">화면 사이즈를 줄여주세요.</div>
+    <script src="index.js"></script>
   </body>
 </html>
